--- a/tabla-precios.css
+++ b/tabla-precios.css
@@ -2,7 +2,10 @@ body{
     font-family: 'Lato', sans-serif;
 }
 h2{
-    font-weight: 700;
+    font-weight: 400;
+}
+p{
+    font-weight: 300;
 }
 .container{
     margin: 0 auto;
