--- a/tabla-precios.css
+++ b/tabla-precios.css
@@ -17,6 +17,13 @@ p{
 .text-center{
     text-align: center;
 }
+.columna{
+    background: rgb(238,238,238);
+    color: #333;
+    border: 1px solid #333;
+    padding: 10 px;
+    margin: 10px;
+}
 .precio{
     font-size: 50px;
     color: #00dac7;
